add examples for intuition of single head self-attention

--- a/examples/self-attention.ipynb
+++ b/examples/self-attention.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "870991ef-9edd-4bdb-b91b-e808e1f7e3a5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/home/wangyongxin/.conda/envs/tang/lib/python3.10/site-packages/torch/nn/modules/transformer.py:20: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at ../torch/csrc/utils/tensor_numpy.cpp:84.)\n",
+      "  device: torch.device = torch.device(torch._C._get_default_device()),  # torch.device('cpu'),\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,6 +28,7 @@
    "source": [
     "import torch\n",
     "from torch.functional import F\n",
+    "from torch import nn\n",
     "\n",
     "torch.manual_seed(1337)\n",
     "B,T,C = 4,8,2 # ---> Batch,Time,Channels\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "308a477c-48f2-4f78-b713-e235a191d89f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "3ca25638-f1db-42b5-8433-61915a415a58",
    "metadata": {},
    "outputs": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "3c32b3b4-8f24-41f5-baa1-a389a5b52ab1",
    "metadata": {},
    "outputs": [
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "40039a8e-85b9-46e4-bb0d-d493d8f830fe",
    "metadata": {},
    "outputs": [
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "39f3915d-5f35-4bb8-a331-588b84475c16",
    "metadata": {},
    "outputs": [],
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "cd575b6d-236e-4956-826e-0bd42569f045",
    "metadata": {},
    "outputs": [
@@ -196,7 +205,7 @@
        "False"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,21 +216,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "id": "48a9d505-cd98-4418-992b-aa46e706c0cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., -inf, -inf, -inf, -inf, -inf, -inf, -inf],\n",
+      "        [0., 0., -inf, -inf, -inf, -inf, -inf, -inf],\n",
+      "        [0., 0., 0., -inf, -inf, -inf, -inf, -inf],\n",
+      "        [0., 0., 0., 0., -inf, -inf, -inf, -inf],\n",
+      "        [0., 0., 0., 0., 0., -inf, -inf, -inf],\n",
+      "        [0., 0., 0., 0., 0., 0., -inf, -inf],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., -inf],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0.]])\n"
+     ]
+    }
+   ],
    "source": [
     "tril = torch.tril(torch.ones(T,T))\n",
     "w = torch.zeros(T,T)\n",
     "w = w.masked_fill(tril==0, float('-inf'))\n",
+    "print(w)\n",
     "w = F.softmax(w, dim=1)\n",
     "xbow3 = w @ x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "id": "ac3d6e75-be9f-4acd-996a-ef6f72ae372b",
    "metadata": {},
    "outputs": [
@@ -231,7 +256,7 @@
        "False"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,8 +267,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c86a4b3f-5853-427b-81eb-3d2aa5e78c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# self-attention!\n",
+    "B,T,C = 4,8,32\n",
+    "x = torch.randn(B, T, C)\n",
+    "\n",
+    "# first head self-attention\n",
+    "hidden_size = 16\n",
+    "query = nn.Linear(C, hidden_size, bias=False)\n",
+    "key = nn.Linear(C, hidden_size, bias=False)\n",
+    "value = nn.Linear(C, hidden_size, bias=False)\n",
+    "q = query(x)\n",
+    "k = key(x)\n",
+    "v = value(x) # for first head\n",
+    "\n",
+    "w = q @ k.transpose(-2, -1)\n",
+    "tril = torch.tril(torch.ones(T,T))\n",
+    "w = w.masked_fill(tril == 0., float('-inf'))\n",
+    "w = F.softmax(w, dim=-1) # B, T, T\n",
+    "output = w @ v\n",
+    "output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0412fb6d-7d80-413c-8d97-55928332c667",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7299abb-fdb0-4739-abad-2e584d766c5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550507e6-9c56-46f3-84fa-c83772dccff1",
    "metadata": {},
    "outputs": [],
    "source": []
